made SimpleMobilityScan use an array of MassList[] instead of hash set